# git-visualizer

./: .gitignore  AGENTS.md  CLAUDE.md  PRD_FIGMA_MAKE.md  README.md  clean_applycamera.py  clean_camera.py  clean_mousedown.py  eff:0  index.html  main.mjs  main.ts  main:0  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remove_stubs.py  tsconfig.json  vertical:0  vite.config.ts  water-ripple-demo.html
cobble-icon.icon/: icon.json
components/: AgentHarnessView.tsx  BranchCard.tsx  BranchGridGroupView.tsx  BranchGridMap.tsx  BranchGridMapView.tsx  BranchGridView.tsx  BranchGroupView.tsx  BranchMap.tsx  BranchMapCanvasHtml.tsx  BranchMapView.tsx  CanvasLineLayer.tsx  CobblePlusIcon.tsx  DenseBranchSidebar.test.ts  DenseBranchSidebar.tsx  DiffViewer.tsx  HtmlNodeLayer.tsx  PreviewLogPanel.tsx  PreviewTerminalPanel.tsx  RemoteSyncBadge.tsx  Sidebar.tsx  StatusBadge.tsx  (+4 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  test_watcher.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_source_padded.py  icon.icns
src-tauri/resources/: Assets.car  assetcatalog_generated_info.plist  cobble-icon.icns
src-tauri/src/: commit_app_preview.rs  github.rs  lib.rs  macos_traffic_lights.rs  main.rs  opencode.rs  repo_git_gate.rs  sidecar_rpc.rs  terminal_ai_titles.rs  terminal_host.rs
src-tauri/src/git/: branches.rs  cli.rs  commits.rs  graph.rs  mod.rs  preview.rs  stash.rs  worktrees.rs
src-tauri/src/preview/: mod.rs  window.rs
src-tauri/tests/golden/: sidecar_handshake.json  sidecar_version_mismatch.json
(+634 files in other folders)
