[package]
name = "git-visualizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "git_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
dirs = "6"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
