[package]
name = "git-visualizer"
version = "0.1.0"
edition = "2021"
default-run = "git-visualizer"

[lib]
name = "git_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
dirs = "6"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSResponder", "NSWindow", "NSWorkspace", "NSRunningApplication", "libc"] }
core-graphics = "0.24"
notify = "7.0.0"
rayon = "1.10"
